--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ install:
   - true
 
 script:
+  - |
+      if [ "${TRAVIS_PULL_REQUEST}" = "true" ] ; then 
+        git diff --name-only promote-cookbook..master | grep -E '(staging\.txt$)' || { 
+          echo "don't run travis on PR for other file change that staging.txt"
+          exit
+        }
   - Rscript R/create-md.R
   - git add -A
   - git diff --cached
