--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   - true
 
 script:
+  - echo $TRAVIS_PULL_REQUEST
+  - echo $TRAVIS_BRANCH
   - |
       if [ "${TRAVIS_PULL_REQUEST}" = "true" ] ; then 
         git diff --name-only ${TRAVIS_BRANCH}..HEAD -- | grep -E '(staging\.txt$)' || { 
