--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,14 @@ install:
 script:
   - echo $TRAVIS_PULL_REQUEST
   - echo $TRAVIS_BRANCH
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep -E 'staging\.txt' || echo test
+  - |
+    if [ "$TRAVIS_PULL_REQUEST" != "false"] 
+    then 
+      git diff --name-only $TRAVIS_COMMIT_RANGE | grep -E 'staging\.txt' || {
+        echo "don't run build on PR without staging.txt"
+        exit
+      }
+    fi
   - Rscript R/create-md.R
   - git add -A
   - git diff --cached
