--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - |
     if [ "$TRAVIS_PULL_REQUEST" != "false" ] 
     then 
-      CHANGED_FILES="$(git diff --name-only $TRAVIS_COMMIT_RANGE)""
+      CHANGED_FILES="$(git diff --name-only $TRAVIS_COMMIT_RANGE)"
       echo $CHANGED_FILES | grep -E 'staging\.txt' || {
         echo "don't run build on PR without staging.txt"
         echo "Changed files are: "$CHANGED_FILES
